--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+This is the blog of a pasta lover. But don't worry, he likes pizza, too. And the science of baking bread. To learn something about this, please visit his <a href="https://www.instagram.com/brotbubi/>Instagram</a>. 
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
-
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
-
-You can edit the `index.html` file to change this content.
-
+To learn something about his other thoughts, please read the following posts:
 # Posts
