--- a/index.html
+++ b/index.html
@@ -67,14 +67,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><p>This is the blog of a pasta lover. But don’t worry, he likes pizza, too. And the science of baking bread. To learn something about this, please visit his &lt;a href=”https://www.instagram.com/brotbubi/&gt;Instagram&lt;/a&gt;.</p>
 
-<p><img src="/blog/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
-
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
-
+<p>To learn something about his other thoughts, please read the following posts:</p>
 <h1 id="posts">Posts</h1>
 
 
