--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This is the blog of a pasta lover. But don't worry, he likes pizza, too. And the science of baking bread. To learn something about this, please visit his <a href="https://www.instagram.com/brotbubi/>Instagram</a>. 
+This is the blog of a pasta lover. But don't worry, he likes pizza, too. And the science of baking bread. To learn something about this, please visit his Instagram (@brotbubi). 
 
 To learn something about his other thoughts, please read the following posts:
 # Posts
