deploy: ac47c0b238703994fc5e35c72b5ab0dd0a4397c2

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This is the blog of a pasta lover. But don’t worry, he likes pizza, too. And the science of baking bread. To learn something about this, please visit his Instagram (@brotbubi).</p>
+        <div class="home"><p>This is the blog of a pasta lover. But don’t worry, he likes pizza, too. And the science of baking bread.</p>
 
-<p>To learn something about his other thoughts, please read the following posts:</p>
+<p>To learn something about his other thoughts on other stuff, please read the following posts:</p>
 <h1 id="posts">Posts</h1>
 
 
